@@ -190,6 +190,28 @@
 	        <rtexprvalue>true</rtexprvalue>
 		</attribute>
 	</tag>
+	
+	<tag>
+	    <name>referencingPages</name>
+	    <tagclass>org.infoglue.deliver.taglib.content.ReferencingPagesTag</tagclass>
+	    <bodycontent>empty</bodycontent>
+	    <info>TemplateController.getReferencingPages(Integer contentId)</info>
+	    <attribute>
+		    <name>id</name>
+	    	<required>true</required>
+	        <rtexprvalue>false</rtexprvalue>
+		</attribute>
+	    <attribute>
+		    <name>contentId</name>
+	    	<required>true</required>
+	        <rtexprvalue>false</rtexprvalue>
+		</attribute>
+	    <attribute>
+		    <name>maxPages</name>
+	    	<required>false</required>
+	        <rtexprvalue>false</rtexprvalue>
+		</attribute>
+	</tag>
 
 	<tag>
         <name>contentVersion</name>
